# neutral-atom-compiler-lab

./: .gitignore  CLAUDE.md  HANDOFF.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.ai_reasoning/: index.yaml
application/: 01_项目总述.md  02_ZAP论文详解.md  03_实验报告.md  04_附录.md  arch_check.txt  check_result.txt  chk.txt  chk2.txt  chk3.txt  chk4.txt  deep_verify_output.txt  fig12_adder.json  fig12_cat.json  fig12_ising.json  fig12_scalability.csv  fig12_scalability_cache.json  fig13_ablation.csv  fig14_err_matrix.csv  fig8_scaling.csv  multi_compiler_results.json  nac_test2.txt  qft150_test.txt  qft200_test.txt  reproduction_diff.csv  项目简历条目.md
boundaries/: B-enola-hardware.yaml  __init__.py
bridges/: BR-keep-vs-move.yaml  BR-parallel-vs-distance.yaml
constraints/: C-qc-aod-routing.yaml  C-qc-connectivity.yaml  C-qc-crosstalk.yaml  C-qc-parking.yaml  C-qc-slot-assignment.yaml  __init__.py  quantum_compiler.yaml
docs/: 14-benchmarks通俗解释.md  RESEARCH.md  SUMMARY.md  ZAP-paper-reading.md  ZAP复现局限分析.md  ZAP复现日志.md  neutral-atom-knowledge-tree.md  编译器设计差异分析.md
experiments/: bridge_swap.py  cross_validate.py  deep_verify.py  fig12_scalability.py  fig13_ablation.py  fig14_sensitivity.py  fig7_14_nac.py  fig8_12_nac.py  fig8_scaling.py  figures.py  figures_multi_compiler.py  lambda_par_swap.py  multi_compiler_compare.py  paper_compare.py  qft_n200_zap.py  qft_scalability_nac.py  qft_scalability_zap.py  reproduce_zap.py  reproduction_verify.py  requirements.zap-reproduction.txt  strategy_compare.py  tight_slot_compare.py  zap_nac_compare.py
(+62 files in other folders)
